--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 </div>
             </div>
         </section>
+        <!-- loader -->
+        <section>
+            <div style="height: 200px;" id="loader" class="d-flex justify-content-center align-items-center d-none">
+                <div class="spinner-grow text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
