added show all albums option

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <section>
             <div id="artists-container" class="row row-cols-1 row-cols-md-3 g-4"></div>
         </section>
+        <!-- albums container -->
+        <section class="my-4">
+            <h1>All Albums</h1>
+            <div id="albums-container" class="row row-cols-1 row-cols-md-3 g-4"></div>
+        </section>
         <!-- artist details modal -->
         <section>
             <!-- Modal -->
