--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
             </div>
         </section>
     </main>
-
+    <footer>
+        <div class="bg-dark text-center mt-5 p-4">
+            <h6 class="text-white">&copy; 2022 - Developed by <a href="https://www.linkedin.com/in/ehsanulislamkhan/"
+                    target="_blank" rel="noopener" class="text-warning">Ehsan</a></h6>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
